[package]
name = "drag_and_drop"
version = "0.1.0"
description = "Drag & Drop example for Tauri v2"
authors = ["YongJoon Joe <developer@yongjoon.net>"]
edition = "2021"

[lib]
name = "drag_and_drop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
